[package]
name = "typora-crack"
version = "0.1.0"
edition = "2021"
authors = ["atopx <3940422@qq.com>"]
description = "Typora is a minimal markdown editor, providing new ways for reading and writing markdown."
license = "MIT"
repository = "https://github.com/atopx/typora-crack"

[dependencies]
glob = "0.3.1"
serde_json = "1.0.117"
